--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "middleware": "^1.0.0",
     "user": "^0.0.0",
     "websocket": "^1.0.34"
