--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "middleware": "^1.0.0",
+    "nodemon": "^3.0.3",
     "user": "^0.0.0",
     "websocket": "^1.0.34"
   }
